# Tests

./: .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README-orig.md  README.md
doc/doxygen/: Doxyfile  license.dox  mainpage.dox
src/: CMakeLists.txt
src/app-lib/: CMakeLists.txt  KoelnerPhonetik.cpp  KoelnerPhonetik.h  VersionInfo.cpp  VersionInfo.h  app-lib.h  applib.dox
src/app-main/: CMakeLists.txt  app-main.cpp  appmain.dox
src/unittest/: CMakeLists.txt  aufgabe.cpp  testCatch2Behaviour.cpp  testHelper.h  testKoelnerPhonetik.cpp  testStringCompares.cpp  testVersionInfo.cpp  testmain.cpp  unittest.dox
